<resources>
    <string name="app_name">MySpinner2</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="college">College name</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="title_activity_add_details">AddDetails</string>
</resources>
