<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.deepanshu.myspinner2.MainActivity"
    tools:showIn="@layout/activity_main">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30dp"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/college"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginStart="30dp"
         android:hint="@string/college" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginStart="30dp"
        android:hint="@string/contact" />

    <TextView
        android:id="@+id/address"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginStart="30dp"
        android:hint="@string/address" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="30dp"
        android:text="@string/add" />

</RelativeLayout>
